src/App.css
@media only screen and (max-width: 600px) {
  .hero-name {
    font-size: 11px !important;
  }
}

.moon {
  background-color: #660505;
  border-radius: 50% 50% 1% 1%;
  height: 20%;
  width: 100%;
  margin-top: 60%;
}
.hero-name {
  margin-left: 5px;
  font-weight: bold;
  font-size: 22px;
}
.team-container {
  display: flex;
  flex-direction: row;
  justify-content: space-around;
  width: 100%;
  height: 100%;
  align-self: center;
}
.page-container {
  display: flex;
  flex-direction: column;
}
.hero-img {
  min-height: 5%;
  display: flex;
  width: 40%;
  justify-self: center;
  align-self: center;
  margin-left: 30%;
}
img {
  min-height: 5%;
  height: 5%;
}
.hero-container {
  background-color: #000;
  color: #fff;
  border: 1px solid #000;
  align-content: center;
  display: flex;
  text-align: center;
  justify-content: center;
  justify-items: center;
  flex-direction: column;
  background-image: url(./heroes/torch.png);
  background-size: contain;
  background-repeat: no-repeat;
  overflow: hidden;
  min-height: 340px;
  height: 20%;
  width: 20%;
}
.App {
  background-color: #16171a;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  padding-left: 5%;
  padding-right: 5%;
}
.App-header {
  background-color: #16171a;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  color: white;
}
#root {
  min-height: 100%;
}
.generate-btn {
  margin-top: 20px;
  width: 20vh;
  height: 5vh;
  font-weight: bold;
  text-align: center;
  align-self: center;
  font-size: 16px;
}

